--- a/03-jak-fedoru-ziskat.adoc
+++ b/03-jak-fedoru-ziskat.adoc
@@ -31,7 +31,7 @@ image::img/instalator-b.png[width=500]
 
 5. _Pevný disk_ -- Fedora v{nbsp}této fázi umožňuje i vytvoření tzv. dualbootu, čili provozování dvou operačních systémů v{nbsp}rámci jednoho počítače. Není problém ji tak doinstalovat vedle už existující instalace _MS{nbsp}Windows_. V{nbsp}rámci dialogu je vlevo po celou dobu k{nbsp}dispozici přehled existujících oddílů. Než změny potvrdíte, pečlivě si zkontrolujte, že jsou tam všechny (např. oddíly jiných operačních systému), které tam mají být. Po odsouhlasení tohoto kroku proběhnou nevratné změny a zápis nového rozložení na disk.
 
-6. _Závěr_ -- zatímco se systém instaluje, vyplníme několik zásadních údajů, jako je heslo roota (administrátora) a vytvoříme uživatelský účet, pod kterým budeme běžně pracovat (a opět mu nastavíme heslo). Pozor, Fedora uplatňuje, na rozdíl od mnoha dalších linuxových distribucí, klasický přístup k{nbsp}uživatelským účtům, při kterém účet uživatele root není zakázaný. Potřebujeme tedy nastavit a znát minimálně dvě hesla. Nevyhovuje vám toto nastavení? Nevadí, i u{nbsp}našeho běžného účtu můžeme zaškrtnout volbu \uv{Správce}, která nám umožní velkou část správcovské činnosti stvrdit i pod naším běžným účtem a tedy i jeho heslem.
+6. _Závěr_ -- zatímco se systém instaluje, vyplníme několik zásadních údajů, jako je heslo roota (administrátora) a vytvoříme uživatelský účet, pod kterým budeme běžně pracovat (a opět mu nastavíme heslo). Pozor, Fedora uplatňuje, na rozdíl od mnoha dalších linuxových distribucí, klasický přístup k{nbsp}uživatelským účtům, při kterém účet uživatele root není zakázaný. Potřebujeme tedy nastavit a znát minimálně dvě hesla. Nevyhovuje vám toto nastavení? Nevadí, i u{nbsp}našeho běžného účtu můžeme zaškrtnout volbu _Správce_, která nám umožní velkou část správcovské činnosti stvrdit i pod naším běžným účtem a tedy i jeho heslem.
 
 7. _A{nbsp}je hotovo_ -- celá instalace by neměla zabrat více než několik desítek minut. Po restartu a přihlášení provedeme ještě několik krátkých poinstalačních nastavení (a pokud jsme měnili nastavení bootování, uvedeme ho do původního stavu) a systém je připraven. Zdařilo se? Můžeme tak začít používat Fedoru v{nbsp}celé její kráse!
 
