--- a/04-prvni-kroky-v-systemu.adoc
+++ b/04-prvni-kroky-v-systemu.adoc
@@ -65,7 +65,7 @@ image::img/software.png[width=500]
 
 === Instalace nového softwaru
 
-Fedora už v{nbsp}základu obsahuje mnoho potřebných aplikací (webový prohlížeč _Mozilla{nbsp}Firefox_, kancelářský balík _LibreOffice_, multimediální přehrávač _Totem_ a desítky dalších). Co když ale potřebujeme více programů? Ne všechen software může být zahrnut do výchozí instalace systému, je ale dostupný v{nbsp}tzv. repozitářích, z{nbsp}nichž lze daný program jednoduše stáhnout. Repozitář je tvořen sadou serverů a jejich zrcadel, kde jsou umístěny balíky s{nbsp}různými aplikacemi a knihovnami. Slyšeli jste o{nbsp}\uv{appstore} na různých mobilních platformách? Pak jste velice blízko, základní princip je stejný. Chcete nějaký program stáhnout z{nbsp}webu a nainstalovat? Zkuste se nejprve podívat, zda není k{nbsp}dispozici v{nbsp}repozitářích. Na Linuxu se tak instaluje naprostá většina aplikací. Jak tedy na to?
+Fedora už v{nbsp}základu obsahuje mnoho potřebných aplikací (webový prohlížeč _Mozilla{nbsp}Firefox_, kancelářský balík _LibreOffice_, multimediální přehrávač _Totem_ a desítky dalších). Co když ale potřebujeme více programů? Ne všechen software může být zahrnut do výchozí instalace systému, je ale dostupný v{nbsp}tzv. repozitářích, z{nbsp}nichž lze daný program jednoduše stáhnout. Repozitář je tvořen sadou serverů a jejich zrcadel, kde jsou umístěny balíky s{nbsp}různými aplikacemi a knihovnami. Slyšeli jste o{nbsp}_appstore_ na různých mobilních platformách? Pak jste velice blízko, základní princip je stejný. Chcete nějaký program stáhnout z{nbsp}webu a nainstalovat? Zkuste se nejprve podívat, zda není k{nbsp}dispozici v{nbsp}repozitářích. Na Linuxu se tak instaluje naprostá většina aplikací. Jak tedy na to?
 
 1. _Grafický správce_ -- aplikace _Software_ je přesně ten druh programu, který znáte z{nbsp}libovolné mobilní platformy. Je to elegantní a přehledná vstupní brána do repozitářů, kde lze dle názvu (nebo v{nbsp}rámci kategorie) vyhledávat celistvé aplikace a různé doplňky pro systém. Každá aplikace zde má svůj přehledný popis včetně licence a své velikosti. Stále platí: vše je opensource, vše je bezplatné. Přes nástroj _Software_ můžeme aplikace samozřejmě i odinstalovat a setkáme se s{nbsp}ním vždy, když budeme systém (a balíky v{nbsp}něm) aktualizovat.
 
