--- a/en-US/01-introduction.adoc
+++ b/en-US/01-introduction.adoc
@@ -1,3 +1,3 @@
 == Introduction
 
-You've decided to install the operating system Fedora on your workstation, desktop, laptop, netbook... (let's call it a PC). How to proceed? What are the strengths of Fedora compared to other operating systems? How to get it and install it? How to tweak it to your taste and for a particular use? Let's look at it step by step.
+So, you've decided to install the Fedora operating system on your workstation, desktop, laptop, netbook ... or any other kind of a PC. How should you proceed? What are the benefits of Fedora as compared to other operating systems? How do you get it and install it? How do you tweak it to your taste and for your particular needs? In this guide we will examine each of these questions, step by step.
