Proofreading and edits for English Ch 2

--- a/en-US/02-what-is-fedora-about.adoc
+++ b/en-US/02-what-is-fedora-about.adoc
@@ -1,16 +1,24 @@
 == What is Fedora about
 === Who is it for?
 
-Fedora in the _Workstation_ edition aims at users who use computers to primarily create, no matter if it's software development or other creative activities. It offers the{nbsp}_GNOME{nbsp}3_ environment and a variety of applications such as developer tools _DevAssistant_ or newly _Builder_, apps for virtualization (_Boxes_), container management (_Docker_) etc. Does that mean that Fedora has given up satisfying needs of an average user? No, Fedora is also suitable for multimedia tasks such as video editing (_PiTiVi_) or bitmap (_GIMP_) and vector (_Inkscape_) graphics editing. In a sense, Fedora is a better operating system for an average user than it ever was.
+Fedora is available in several different editions. Editions are targeted to different kinds of users. The Fedora _Workstation_ edition is designed for users who use computers primarily to create everything from engineering style work, such as software, to creative work, such as art, music and literature. It features the{nbsp}_GNOME{nbsp}3_ environment and a variety of applications, such as, developer tools, like _DevAssistant_ or the newly released _Builder_, apps for virtualization, such as, (_Boxes_), container management tools, such as, (_Docker_), and more. Does this mean that Fedora is only for developers and engineers? No, Fedora is also great for multimedia tasks such as video editing, using tools like (_PiTiVi_), or for graphics and image editing using tools such as (_GIMP_)for bitmaps and (_Inkscape_) for vector graphics. In a sense, Fedora is a better operating system for an average user than it ever was.
 
-=== Openness
+=== Open Source and Free
 
-Fedora is a Linux operating system that has a history of more than 10 years of development by a community which is a group of both professional developers and volunteers. It has always included and will include only open source software. That's software which has available source code, can be distributed, modified, and used for any purpose. Fedora doesn't include software you couldn't "touch" on the source code level. On the other hand, it doesn't prevent you from installing any software you want. No matter if it's in the form or an individual package or a repository (see the _Installing new software_ chapter). Do you want _Google Chrome_? You'll have it. But even without 3rd-party software, you'll find more then 20 thousand packages for Fedora which represent various apps, extensions, and libraries. It's not only about license purity. Fedora also respects the software patent law (even though it may not be relevant in some parts of the world). You can be sure that you don't break law by using Fedora.
+Open source software is software that has made its source code available for distribution, modification, and use for any purpose. Fedora doesn't include software that can't be reviewed at the source code level. Fedora has been created and maintained for over 10 years by a community of professional developers and volunteers who are passionate about open source software. It has always included and will include only open source software.
+
+However, this doesn't prevent you from installing any software you want, even non-open source software. Do you want a non-open source application, such as _Google Chrome_? You can easily install it. But, even without 3rd-party and non-open source software, you'll find more then 20 thousand packages for Fedora which represent various apps, extensions, and libraries. You'll also be happy to discover that many of these open source programs are not just alternatives, they are often better or more powerful than their closed source cousins. For more information, (see the _Installing new software_ chapter). 
+
+It's not just about open source. Fedora is also passionate about freedom in the form of software licenses and patents. Fedora respects software patent law (even though it may not be relevant in some parts of the world). You can be sure that you are not breaking laws by using Fedora.
 
 === Security and Privacy
 
-Development of Fedora has clear rules and security is a priority. Fedora is tested like any other significant software product. Moreover Fedora is a base for Red Hat Enterprise Linux which is offered with commercial support. Red Hat also pays many developers, who are involved in the Fedora Project, and owns Fedora trademarks. Fedora community support, that lasts for two release cycles plus one month (which is 13 months considering Fedora has a 6-month release cycle), strictly includes security fixes. And not only that. Fedora also updates to newer versions of the Linux kernel. Simply put, newer kernel versions mean new hardware support which is another plus for Fedora. It also doesn't include any programs that would send any sensitive data out without your approval. Never. Fedora doesn't spy on you, it respects your privacy.
+Fedora development prioritizes security and includes clear rules to ensure that it remains a focus. Fedora is tested, like any other significant software product. Moreover, Fedora is the base for Red{nbsp}Hat{nbsp}Enterprise{nbsp}Linux, a commercially supported operating system offerred by Red{nbsp}Hat. Red{nbsp}Hat employs a lot of developers, many who are involved in the Fedora Project, and owns Fedora trademarks.
 
-=== At the Front of the Pack
+Fedora community support lasts for two release cycles plus one month. Currently Fedora releases a new version every 6 months, meaning each version is supported for 13 months. Fedora community support includes security fixes and kernel updates. This last one is significant because new kernels mean improved and new hardware support. This is a big advantage of using Fedora.
 
-Fedora integrates a lot of new software, it's often the first (or one of the first) operating systems that adopts the new technology. Fedora is very often where new technologies are being developed. Open source software is about collaboration and people who are involved in Fedora are very often active in other projects, too. They don't wait until someone else develops it and they can then include it in Fedora, but actively participates in upstream projects where they collaborate with participants from other Linux operating systems or independent developers. It's common that such software then becomes de facto standard in the Linux world. Fedora users keep fingers on the pulse and are ahead of others. That's what Fedora is like. Progressive, innovative, at the front of the pack.
+The Fedora community carefully selects the software to include in the operating system and is concerned about privacy. Therefore, Fedora doesn't include any programs that send any sensitive data without your permission. Fedora doesn't spy on you, it respects your privacy.
+
+=== Leading the Way
+
+Fedora integrates a lot of new software and is often the first (or one of the first) operating systems to adopt new technology. Fedora is very often where new technologies are being developed and tested. Open source software is about collaboration and people who are involved in the Fedora Project are very often active in other projects, too. They don't wait until someone else develop software so they can include it in Fedora. Instead they actively participate in project's development and collaborate with participants from other Linux operating systems or independent developers. It's common that such software goes on to become the de facto standard of the Linux world. Fedora users keep fingers on the pulse of innovation and change and are ahead of others. This is why it is easy to say that Fedora is progressive, innovative, and leading the way.
